@@ -17,7 +17,7 @@ use YAML::XS ();
 use App::Koyomi::Context;
 use App::Koyomi::JobTime::Formatter qw(str2time);
 
-use version; our $VERSION = 'v0.3.0';
+use version; our $VERSION = 'v0.3.1';
 
 my @CLI_METHODS = qw/add list modify delete/;
 
