@@ -13,7 +13,7 @@ use Smart::Args;
 
 use App::Koyomi::Job;
 
-use version; our $VERSION = 'v0.3.0';
+use version; our $VERSION = 'v0.3.1';
 
 my $SCHEDULE;
 
