@@ -2,6 +2,11 @@ Revision history for Perl extension App-Koyomi
 
 {{$NEXT}}
 
+2015-06-01 v0.3.1  YASUTAKE Kiyoshi <yasutake.kiyoshi@gmail.com>
+
+    - Feature: koyomi-cli - CRUD for job records. Currently "list" and "modify"
+      only.
+
 2015-05-31 v0.3.0  YASUTAKE Kiyoshi <yasutake.kiyoshi@gmail.com>
 
     - Feature: Enable to specify user to execute job command
